[BlackBerry] Crash due to an assert running test editing/execCommand/indent-paragraphs.html https://bugs.webkit.org/show_bug.cgi?id=114944

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2013-05-16
Reviewed by Rob Buis.

It crashes in network platform code when trying to save an
invalid URL in the disk cache. That test contains references to
empty URLs like http://. Those empty URLs, are parsed as http:/ by
KURL and considered valid. BlackBerry network platform uses GURL
which considers those URLs invalid. We needed to check that the
URLs are valid for our platform before starting the network
operation.

Fixes a crash running test
editing/execCommand/indent-paragraphs.html.

* platform/network/blackberry/NetworkManager.cpp:
(WebCore::NetworkManager::startJob): Check if the request URL is
valid from the platform point of view right after creating the
platform network request and return early if the URL is invalid
with StatusErrorInvalidUrl error.

Canonical link: https://commits.webkit.org/134646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150224 268f45cc-cd09-0410-ab3c-d52691b4dbfc